# libva-epiphany-driver

./: AUTHORS  Makefile.am  NEWS  README  configure.ac
src/: Makefile.am  epiphany_drv_video.c  epiphany_drv_video.h  epiphany_jpeg.c  epiphany_jpeg.h  epiphany_output_dri.c  epiphany_output_dri.h  sysdeps.h
